2010-02-16  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 2952086 by Martin Hoeller:
    * source/org/jfree/chart/renderer/xy/XYShapeRenderer.java
    (findZBounds): New method,
    * source/org/jfree/data/general/DatasetUtilities.java
    (findZBounds(XYZDataset): New method,
    (findZBounds(XYZDataset, boolean)): Likewise,
    (findZBounds(XYZDataset, List, Range, boolean)): Likewise,
    * tests/org/jfree/chart/renderer/xy/junit/XYShapeRendererTests.java
    (testFindZBounds): New method.

2010-02-09  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2946521:
    * source/org/jfree/chart/plot/dial/StandardDialScale.java
    (StandardDialScale): Check 'majorTickIncrement' argument.

2010-02-09  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2947660:
    * source/org/jfree/chart/renderer/category/AbstractCategoryRenderer.java
    (getLegendItems): Fix null check.

2009-12-09  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/DefaultPolarItemRenderer.java
    (getLegendItem): Handle multiple datasets,
    * source/org/jfree/chart/plot/PolarPlot.java
    (fixedLegendItems): New field,
    (getFixedLegendItems): New method,
    (setFixedLegendItems): Likewise,
    (getIndexOf(PolarItemRenderer)): Likewise,
    (getLegendItems): Handle multiple datasets,
    (equals): Updated for new fields.

2009-12-08  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/XYBoxAndWhiskerRenderer.java
    (drawVerticalItems): Check for null outliers.

2009-12-08  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/statistics/HistogramDataset.java
    (addSeries): Fire dataset change event.

2009-11-27  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/PolarPlot.java
    (axis): Removed,
    (dataset): Likewise,
    (renderer): Likewise,
    (axes): New field,
    (axisLocations): Likewise,